syntax = "proto2";

package dep;

option java_package = "com.thesamet.scalapb.examples";

import "simple.proto";

message DependentProto {
  optional simple.SimpleMessage simple_field = 1;
}
