syntax = "proto2";

package simple;

option java_package = "com.thesamet.scalapb.examples";

message SimpleMessage {
  optional int32 number = 1;
}

